# asteroidhammer

./: README.md  pyproject.toml
asteroidhammer/: __init__.py  data.py  utils.py
src/asteroidhammer/: __init__.py  background.py  data.py  main.py  matrices.py  plotting.py  query.py  rip.py
src/asteroidhammer/data/: sector0001_camera1_ccd4.txt  sector0002_camera1_ccd3.txt  sector0002_camera1_ccd4.txt  sector0011_camera1_ccd4.txt  sector0012_camera1_ccd4.txt
